--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,9 @@
 body {
   font-family: 'Montserrat', Helvetica, sans-serif;
   color: white;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 .custom-screen-width{
   width: 85rem;
@@ -52,4 +55,65 @@ body {
   width: 100%;
   border: 1px dashed #ffffff83;
   box-shadow: 0 2px 15px 0 #ffffff7a;
+}
+.btn {
+  padding: 8px 25px;
+  border: none;
+  outline: none;
+  color: #FFF;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 12px;
+}
+
+.btn::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #1E0039;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.btn::before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #FF0000, #FF7300, #FFFB00, #48FF00,
+    #00FFD5, #002BFF, #FF00C8, #FF0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 600%;
+  z-index: -1;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  filter: blur(6px);
+  animation: glowing 20s linear infinite;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+  opacity: 1; 
+}
+
+@keyframes glowing {
+  0% {background-position: 0 0;}
+  50% {background-position: 400% 0;}
+  100% {background-position: 0 0;}
+}
+
+.btn:hover::before {
+  opacity: 1; 
+}
+
+.btn:hover::after {
+  background: transparent;
+}
+
+.btn:hover {
+  color: #000000;
 }
